# passes-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/pass-generator/: Cargo.toml
examples/pass-generator-dal/: Cargo.toml  README.md
examples/pass-generator-dal/src/: main.rs
examples/pass-generator/src/: main.rs
src/: error.rs  lib.rs  package.rs  pass.rs
src/package/: manifest.rs  pass_writer.rs  read.rs  resource.rs  sign.rs  write.rs
src/pass/: barcode.rs  beacon.rs  date_format.rs  fields.rs  location.rs  nfc.rs  semantic_tags.rs  visual_appearance.rs  web_service.rs
