[package]
name = "pkpass"
description = "Rust library for generate Apple Wallet Passes for iOS, WatchOS, MacOS."
version = "1.0.2"
edition = "2021"
authors = [
    "Kevin Seidel <k.seidel@q1.eu>",
    "Mark Vodyanitskiy <mvodya@icloud.com>",
]
license = "MIT"
readme = "README.md"
include = ["src/", "LICENSE", "README.md"]
keywords = ["passkit", "wallet", "apple"]
categories = ["parsing"]
documentation = "https://docs.rs/pkpass/latest/pkpass/"
repository = "https://github.com/Q1-Energie-AG/pkpass"

[workspace]
members = ["examples/pass-generator", "examples/pass-generator-dal"]

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
cms = { version = "0.2.3", features = ["builder"] }
is_empty = "0.3"
regex = "1.10.3"
rsa = { version = "0.9.8", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.12"
x509-cert = { version = "0.2.5", features = ["builder"] }
zip = "4.0"

[dev-dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
